--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-primer
-title: Project Statment
+title: Project Statement
 description: Lending Club Data-Driven Investing
 baseurl:
 markdown: kramdown
